# TerraVecta

./: .gitignore  CMakeLists.txt  Voxel Game Market and Design_.md  VoxelGamePlan.md
shaders/: simp.vert  simple.frag  ui.frag  ui.vert
src/: Application.cpp  Biome.cpp  BiomeManager.cpp  CraftingSystem.cpp  GameUI.cpp  Inventory.cpp  PhysicsEngine.cpp  Shader.cpp  TextureAtlas.cpp  VoxelChunk.cpp  WaterSystem.cpp  Window.cpp  glad.cpp  main.cpp
src/include/: Application.h  Biome.h  BiomeManager.h  CraftingSystem.h  Frustum.h  GameUI.h  GlmOperators.h  Inventory.h  PhysicsEngine.h  Shader.h  TextureAtlas.h  VoxelChunk.h  WaterSystem.h  Window.h
src/include/glad/: glad.h
src/tests/: TestApplication.cpp  TestVoxelChunk.cpp
